@startuml database_diagram
title RFID Back - Database Diagram

' ===============================
' DATABASE DIAGRAM
' ===============================
hide circle
'skinparam linetype ortho
skinparam classAttributeIconSize 0

' TODO: Look at new UUID postgres type for primary keys (therefore no need for creation or update timestamps)

' ===============================
' MAIN ENTITIES
' ===============================


entity "Picker" as picker {
  *id : UUID (PK)
  --
  lastname : string(50)
  firstname : string(50)
  comment : string(280)
  creation_date : timestamp
}

entity "Tag" as tag {
  *id : UUID (PK)
  --
  bucket_id : UUID (FK -> Bucket) (nullable)
  uid : string(50) <<UNIQUE>>
  creation_date : timestamp
}

entity "Bucket" as bucket {
  *id : UUID (PK)
  --
  picker_id : UUID (FK -> Picker) (nullable)
  number: integer <<UNIQUE>>
  creation_date : date
}

entity "Record" as record {
  *id : UUID (PK)
  --
  picker_id : UUID (FK -> Picker) (nullable)
  tag_id: UUID (FK -> Tag)
  reader_id: UUID (FK -> Reader)
  conformity : ENUM('OK','NOK','CHEAT')
  creation_date : timestamp (nullable)
  comment : text (nullable)
}

entity "Reader" as reader {
  *id : UUID (PK)
  --
  uid : string(50) <<UNIQUE>>
  api_token : string(255) <<UNIQUE>>
  comment : string(280) (nullable)
  creation_date : timestamp
}

' ===============================
' RELATIONS & CARDINALITÉS
' ===============================
picker ||--o{ bucket
tag }|--|| bucket
picker ||--o{ record
reader ||--o{ record
tag ||--o{ record

@enduml